@@ -118,7 +118,7 @@ TMW.GroupConfigTemplate.args.position = {
 			name = L["UIPANEL_LEVEL"],
 			type = "range",
 			order = 7,
-			min = 1,
+			min = 5,
 			softMax = 100,
 			step = 1,
 			set = function(info, val)
